# touch-grass

./: .pre-commit-config.yaml  Dockerfile  README.md  gen_enc.py  pyproject.toml  requirements.txt  ruff.toml  start.sh  test.sh
.github/workflows/: build.yml  tests.yml
client/: apps.py  models.py  tests.py
client/migrations/: 0001_initial.py
config/: settings.py  urls.py
contact/: forms.py  tests.py  urls.py  views.py
contact/templates/contact/: contact.html
main/: admin.py  api.py  apps.py  models.py  schema.py  tests.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_delete_client.py  0003_initial.py
main/templates/main/: index.html
static/images/: favicon.ico.bak
templates/: base.html
utils/: create_api_key.py  create_encryption_key.py  create_secret_key.py
