[tool.poetry]
name = "touch-grass"
version = "0.1.0"
description = "Personal Home Page"
authors = ["Simon Antonius Lauer <simon.lauer@posteo.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.1"
whitenoise = "^6.7.0"
dj-database-url = "^2.2.0"
gunicorn = "^22.0.0"
uvicorn = "^0.30.1"
cryptography = "^42.0.8"
django-ninja = "^1.2.0"


[tool.poetry.group.development.dependencies]
ipython = "^8.25.0"
django-extensions = "^3.2.3"
pre-commit = "^3.7.1"
ruff = "^0.5.0"
coverage = "^7.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
